# smarter_bins

./: .gitignore  README.md  package-lock.json  package.json
api/: Cargo.toml  index.js  package-lock.json  package.json
api/routes/: user.js
api/src/: lib.rs  main.rs
smarter_bins_frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
smarter_bins_frontend/.svelte-kit/: ambient.d.ts
smarter_bins_frontend/src/: +layout.svelte  App.svelte  app.html  main.js
smarter_bins_frontend/src/lib/: qr.svelte
smarter_bins_frontend/src/routes/: Home.svelte  Search.svelte
smarter_bins_frontend/src/routes/[id]/: +page.js  +page.svelte
smarter_bins_frontend/src/routes/auth/login/: login.svelte
smarter_bins_frontend/src/routes/login/: +page.svelte
smarter_bins_frontend/src/routes/search/: +page.svelte
