[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.24"
rqrr = "0.6"
pkg-config = "0.3.27"
serde-wasm-bindgen = "0.6.5"

[build-dependencies]
pkg-config = "0.3.27"

[lib]
crate-type = ["cdylib", "rlib"]
